--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 
     <dimen name="side_margin">16dp</dimen>
     <dimen name="header_margin">16dp</dimen>
+    <dimen name="Flicker_item_image_height">100dp</dimen>
 </resources>
