-- Adding 2 senarios for searching -- handle app up navigation -- ui Changes [ padding , margains , image loading ] for flicker_gallery_list_item.xml

--- a/app/src/main/res/layout/fragment_show_movie_details.xml
+++ b/app/src/main/res/layout/fragment_show_movie_details.xml
@@ -1,35 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <data>
+
+        <variable
+            name="movie"
+            type="com.mohamedzamel.movies.shared.database.entities.Movie" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <include
+            android:id="@+id/movieDetailsCard"
+            layout="@layout/movie_list_item"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/side_margin"
+            android:layout_marginTop="@dimen/header_margin"
+            android:layout_marginEnd="@dimen/side_margin"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:movie="@{movie}" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/flickr_list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:clipToPadding="false"
-            android:paddingStart="@dimen/side_margin"
-            android:paddingTop="@dimen/header_margin"
-            android:paddingEnd="@dimen/side_margin"
+            android:layout_marginTop="@dimen/side_margin"
+
+
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/movieDetailsCard"
             app:spanCount="@integer/grid_columns"
-
             tools:listitem="@layout/flicker_gallery_list_item" />
 
-        <Button
-            android:id="@+id/button_second"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/previous"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/flickr_list" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
