--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorOnPrimary">@android:color/black</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorOnSurface">@android:color/black</item>
+        <item name="colorOnSurface">@android:color/white</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="colorSurface">@android:color/white</item>
         <item name="colorSecondary">@android:color/black</item>
@@ -20,7 +20,10 @@
 
     <style name="AppTheme.AppBarOverlay" parent="AppTheme" />
 
-    <style name="AppTheme.PopupOverlay" parent="Theme.MaterialComponents.DayNight.DarkActionBar" />
+    <style name="AppTheme.PopupOverlay" parent="Theme.MaterialComponents.Light.DarkActionBar" />
 
+    <style name="TextAppearance.AppTheme.Toolbar.Text" parent="TextAppearance.MaterialComponents.Headline5">
+        <item name="android:textColor">@android:color/white</item>
+    </style>
 
 </resources>
