--- a/app/src/main/res/layout/flicker_gallery_list_item.xml
+++ b/app/src/main/res/layout/flicker_gallery_list_item.xml
@@ -2,8 +2,7 @@
 <layout
 
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -23,6 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/side_margin"
         android:layout_marginTop="@dimen/header_margin"
+        android:layout_marginEnd="@dimen/side_margin"
         android:onClick="@{clickListener}"
         app:cardCornerRadius="5dp"
         app:cardElevation="5dp">
@@ -30,23 +30,23 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="8dp"
-            android:paddingTop="@dimen/header_margin">
 
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/titleTV"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/side_margin"
-                android:gravity="center"
-                android:maxLines="2"
-                android:text="@{photo.title}"
-                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
-                app:layout_constraintBottom_toBottomOf="@+id/flicker_photo"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+            >
 
-                tools:text="title" />
+            <!--            <com.google.android.material.textview.MaterialTextView-->
+            <!--                android:id="@+id/titleTV"-->
+            <!--                android:layout_width="0dp"-->
+            <!--                android:layout_height="wrap_content"-->
+
+            <!--                android:gravity="center"-->
+            <!--                android:maxLines="2"-->
+            <!--                android:text="@{photo.title}"-->
+            <!--                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"-->
+            <!--                app:layout_constraintBottom_toBottomOf="@+id/flicker_photo"-->
+            <!--                app:layout_constraintEnd_toEndOf="parent"-->
+            <!--                app:layout_constraintStart_toStartOf="parent"-->
+
+            <!--                tools:text="title" />-->
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/flicker_photo"
@@ -55,6 +55,7 @@
                 android:contentDescription="@string/search_image_result"
                 android:scaleType="centerCrop"
                 app:imageFromUrl="@{photo.photoUrl}"
+
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
