--- a/app/src/main/res/layout/movie_list_item.xml
+++ b/app/src/main/res/layout/movie_list_item.xml
@@ -22,7 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/side_margin"
-
+        android:layout_marginEnd="@dimen/side_margin"
         android:layout_marginTop="@dimen/header_margin"
         android:onClick="@{clickListener}"
         app:cardCornerRadius="5dp"
