--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Base.Theme.Movie" />
 
-    <style name="Base.Theme.Movie" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Base.Theme.Movie" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorOnPrimary">@android:color/black</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -24,6 +24,14 @@
 
     <style name="TextAppearance.AppTheme.Toolbar.Text" parent="TextAppearance.MaterialComponents.Headline5">
         <item name="android:textColor">@android:color/white</item>
+    </style>
+
+    <style name="AppTheme.SearchView" parent="Widget.AppCompat.SearchView">
+        <!-- Query Text Color -->
+        <item name="android:textColorPrimary">@color/colorPrimary</item>
+        <!-- Hint Color -->
+        <item name="android:textColorHint">@color/colorAccent</item>
+
     </style>
 
 </resources>
