--- a/app/src/main/res/layout/fragment_show_movies_list.xml
+++ b/app/src/main/res/layout/fragment_show_movies_list.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <com.mohamedzamel.movies.shared.utils.ui.progressiveLayouts.ProgressConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
+        android:id="@+id/mainLayout"
         android:layout_height="match_parent"
         tools:context=".features.MoviesList.ui.MovieListActivity">
 
@@ -42,5 +43,5 @@
             tools:listitem="@layout/movie_list_item" />
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </com.mohamedzamel.movies.shared.utils.ui.progressiveLayouts.ProgressConstraintLayout>
 </layout>
