--- a/app/src/main/res/layout/movie_list_item.xml
+++ b/app/src/main/res/layout/movie_list_item.xml
@@ -13,7 +13,7 @@
 
         <variable
             name="movie"
-            type="com.mohamedzamel.movies.shared.database.entities.Movie" />
+            type="com.mohamedzamel.movies.features.moviesList.data.entities.Movie" />
     </data>
 
     <com.google.android.material.card.MaterialCardView
