--- a/app/src/main/res/layout/fragment_show_movies_list.xml
+++ b/app/src/main/res/layout/fragment_show_movies_list.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:id="@+id/mainLayout"
         android:layout_height="match_parent"
-        tools:context=".features.MoviesList.ui.MovieListActivity">
+        tools:context=".features.moviesList.ui.MovieListActivity">
 
         <androidx.appcompat.widget.SearchView
             android:id="@+id/movieSearchView"
